# Plume-Engine

./: .gitignore  CAHIER_DES_CHARGES.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  imgui.ini
branding/: press-kit.md
meta/: plume.json
packaging/linux/: plume.desktop
packaging/mac/: Info.plist
scripts/: vendor_imgui.ps1
src/: main.cpp
src/Core/: Input.cpp  Input.h  PlumeApplication.cpp  PlumeApplication.h  PlumeVersion.h.in  SplashScreen.cpp  SplashScreen.h
src/Editor/: EditorLayer.cpp  EditorLayer.h
src/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/Renderer/Model/: Mesh.h  Model.cpp  Model.h
src/Resources/: PlumeEngine.rc.in
src/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h
src/Version/: PlumeVersion.h.in
